--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Simple starter template for building React apps with Redux, Redux-Saga and Styled Components." />
-  <meta name="keywords" content="react,redux,redux-saga,styled-components,react-testing-library,jest,eslint" />
+  <meta name="description" content="Temporal COVID-19 outbreak data in the Netherlands visualized on a map." />
+  <meta name="keywords" content="corona, covid-19, rivm, nice, outbreak, virus, data, netherlands" />
 
-  <meta name="theme-color" content="#61dafb" />
+  <meta name="theme-color" content="#027afd" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="sitemap" href="%PUBLIC_URL%/sitemap.xml" />
@@ -22,7 +22,7 @@
   <link rel="apple-touch-icon" sizes="384x384" href="%PUBLIC_URL%/icons/icon-384x384.png" />
   <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/icons/icon-512x512.png" />
 
-  <title>react-app-template</title>
+  <title>COVID-19 Data Visualizer</title>
 </head>
 
 <body>
