--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Temporal COVID-19 outbreak data in the Netherlands visualized on a map." />
-  <meta name="keywords" content="corona, covid-19, rivm, nice, outbreak, virus, data, netherlands" />
 
+  <title>COVID-19 Data Visualizer</title>
+
+  <meta name="title" content="COVID-19 Data Visualizer" />
+  <meta name="description" content="Temporal COVID-19 outbreak data in the Netherlands visualized on a map." />
   <meta name="theme-color" content="#027afd" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://covid-19-data-visualizer.tomdewildt.nl" />
+  <meta property="og:title" content="COVID-19 Data Visualizer" />
+  <meta property="og:description" content="Temporal COVID-19 outbreak data in the Netherlands visualized on a map." />
+  <meta property="og:image" content="https://covid-19-data-visualizer.tomdewildt.nl/banner.png" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://covid-19-data-visualizer.tomdewildt.nl" />
+  <meta property="twitter:title" content="COVID-19 Data Visualizer" />
+  <meta property="twitter:description" content="Temporal COVID-19 outbreak data in the Netherlands visualized on a map." />
+  <meta property="twitter:image" content="https://covid-19-data-visualizer.tomdewildt.nl/banner.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="sitemap" href="%PUBLIC_URL%/sitemap.xml" />
@@ -21,8 +35,6 @@
   <link rel="apple-touch-icon" sizes="256x256" href="%PUBLIC_URL%/icons/icon-256x256.png" />
   <link rel="apple-touch-icon" sizes="384x384" href="%PUBLIC_URL%/icons/icon-384x384.png" />
   <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/icons/icon-512x512.png" />
-
-  <title>COVID-19 Data Visualizer</title>
 </head>
 
 <body>
